<resources>
    <string name="app_name">DeskTalk</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="email">Email</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_dob">DOB</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_fathername">Father Name</string>
    <string name="prompt_mothername">Mother Name</string>
    <string name="prompt_blooggrp">Blood Group</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_qualification">Qualification</string>
    <string name="prompt_preschool">Previous School Name</string>
    <string name="prompt_yearEdu">Year of Education</string>
    <string name="prompt_role">Role</string>
    <string name="prompt_des">Description</string>
    <string name="prompt_hobbies">Hobbies</string>
    <string name="prompt_skills">Skills</string>
    <string name="prompt_preschname">Previous School Name</string>
    <string name="prompt_yearofedu">Year of Education</string>
    <string name="prompt_fName">First Name</string>
    <string name="prompt_lName">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="text_forgotpwd">Forgot Password ?</string>
    <string name="action_sign_in">LOGIN</string>
    <string name="text_class_behaviour">Class Behaviour</string>
    <string name="text_acd_perfprmance">Academic Performance</string>
    <string name="text_etra_activity">Extra curricular activities</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="str_continue">Continue</string>
    <string name="str_submit">Submit</string>
    <string name="str_choose_file">Choose File</string>
    <string name="str_forgotpwd">Forgot Password</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_add">Add</string>
    <string name="prompt_schoolname">School Name</string>
    <string name="copyright_message">Copyright © 2017 Leidenschaft Industries Pvt Ltd, All rights reserved.</string>
    <string name="check_connection">Oops!! Check your internet connection</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="attendance_history">Attendance History</string>
    <string name="select_classes">Select Classes</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_dashboard">DeskTalk</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_notification">Notification</string>
    <string name="action_logout">Logout</string>
    <string name="action_save">Save</string>

    <string name="text_TandC">I agree for Terms &amp; Conditions</string>
    <string name="prompt_registered_number">Enter your registered mobile no.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_edit_profile">EditProfile</string>

    <string name="title_activity_main">MainActivity</string>
</resources>
